update index file info

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <img src="img/brenda.jpg" alt="Brenda" style="width:100%">
   <h1>Smokey Brenda</h1>
   <p class="title">Grey Dachund</p>
-  <p>"Great with kids!"</p>
+  <p>"Girl you so gray gray!"</p>
   <p><button>Contact</button></p>
 </div>
 
